<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:padding="3dp"
    android:layout_margin="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dsda"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/user_name"
                android:gravity="right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="      :  "
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dsda"
                android:id="@+id/donation_value"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="      :  "
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/donation_value"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dsda"
                android:textSize="20dp"
                android:id="@+id/currency_type"
                android:textColor="@color/black"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="      :  "
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/currency_type"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dsda"
                android:textSize="20dp"
                android:id="@+id/donation_type"
                android:textColor="@color/black"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="      :  "
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/donation_type"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/checked"
            android:layout_gravity="right"
            android:id="@+id/check"
            android:layout_margin="5dp"/>


    </LinearLayout>

</android.support.v7.widget.CardView>