<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/logo"/>

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/dark"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="أهلا بك في جمعية الأورمان"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:textColor="@color/dark"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/activities_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/activities"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/tent"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/orman_branches_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/branches"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/chair"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/mndob_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mndob"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/camera"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/isal_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/isal"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/camera"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/banks_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/banks"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/transaction"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/chat_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/tent"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/admin_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/admin"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/tent"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/login_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/user"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:id="@+id/signup_layout"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:layout_marginLeft="15dp">-->

                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/signup"-->
                    <!--android:textColor="@color/dark"-->
                    <!--android:gravity="right|center"-->
                    <!--android:layout_marginRight="20dp"-->
                    <!--android:textSize="18dp"-->
                    <!--android:textStyle="bold"/>-->

                <!--<View-->
                    <!--android:layout_width="1dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@color/dark"-->
                    <!--android:layout_marginRight="5dp"/>-->
                <!--<ImageView-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:padding="8dp"-->
                    <!--android:src="@drawable/clipboard"/>-->

            <!--</LinearLayout>-->

            <!--<View-->
                <!--android:layout_width="200dp"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_gravity="right"-->
                <!--android:background="@color/dark"-->
                <!--android:layout_marginRight="30dp"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/logout_layout"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textColor="@color/dark"
                    android:gravity="right|center"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark"
                    android:layout_marginRight="5dp"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:src="@drawable/door"/>

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/dark"
                android:layout_marginRight="30dp"/>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="بوابتك للخير"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="25dp"
        android:textColor="@color/light"
        android:textStyle="bold"/>


</LinearLayout>